Bootstrapping index page

--- a/views/index.twig
+++ b/views/index.twig
@@ -22,9 +22,9 @@
 		      {{site.name}}
 	      </h1>
         <h2 style="color: white;">Tekevän ihmisen olohuone - Makers living room</h2>
-        <button class="contrast">VR Tour</button>
-        <button>Vierailijan info</button>
-        <button>Visitor info</button>
+        <button class="btn btn-secondary">VR Tour</button>
+        <button class="btn btn-primary">Vierailijan info</button>
+        <button class="btn btn-primary">Visitor info</button>
       </div>
     </div>
 
@@ -40,33 +40,33 @@
       <p>Hacklab Jyväskylä ry on yhdistys, jota kuvaillaan kansainvälisesti nimellä makerspace tai hackerspace. Tällaisten yhdistysten aatteisiin kuuluu tieto- ja kädentaitojen avoin jakaminen ja niiden mahdollistaminen kaikille kiinnostuneille. Yhdistys on esimerkiksi yhdessä Linkki Jyväskylä ry kanssa järjestänyt digitaalisen tekemisen Instanssi -festivaalia, kehittänyt ja käyttänyt runsaasti avoimen lähdekoodin ohjelmistoja, tarjonnut käyttökoulutusta ja apua kaikenlaiseen askarteluun sekä puutöihin ja järjestänyt pieniä seminaareja ohjelmistokehityksen teoreettisista puolista.</p>
     </div>
 
-    <div class="row middle-md center-xs">
+    <div class="row">
       <div class="col-md">
-        <article>
-          <h3>Yhteisölliset työtilat</h3>
-          <p>Monipuolinen työtila ja välineet edulliseen jäsenhintaan opiskelija-alennuksin.</p>
-          <footer>
-            <div role="group"><button href="">Liity jäseneksi</button></div>
-          </footer>
-        </article>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Yhteisölliset työtilat</h5>
+            <p class="card-text">Monipuolinen työtila ja välineet edulliseen jäsenhintaan opiskelija-alennuksin.</p>
+            <button class="btn btn-primary btn-block" href="">Hae jäseneksi</button>
+          </div>
+        </div>
       </div>
       <div class="col-md">
-        <article>
-          <h3>Harrasteseuraa paikallisesti ja verkossa</h3>
-          <p>Aktiivinen ja avulias chat ryhmä jossa osaajia erilaisilta teknisiltä ja taiteellisilta aloilta.</p>
-          <footer><div role="group"><button href="">Liity chat-kanavalle</button></div></footer>
-        </article>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Harrasteseuraa paikallisesti ja verkossa</h5>
+          <p class="card-text">Aktiivinen ja avulias chat ryhmä jossa osaajia erilaisilta teknisiltä ja taiteellisilta aloilta.</p>
+          <button class="btn btn-primary btn-block" href="">Liity chat-kanavalle</button>
+          </div>
+        </div>
       </div>
       <div class="col-md">
-        <article>
-          <h3>Osa Suomen Hacklabien verkostoa</h3>
-          <p>Suomessa on Hacklabeja jo 15 kaupungissa.</p>
-          <footer>
-            <div role="group">
-              <button href="hacklab.fi">Katso lisää</button>
-            </div>
-          </footer>
-        </article>
+        <div class="card">
+          <div class="card-body">
+          <h5 class="card-title">Osa Suomen Hacklabien verkostoa</h5>
+          <p class="card-text">Suomessa on Hacklabeja jo 15 kaupungissa.</p>
+            <button class="btn btn-primary btn-block" href="hacklab.fi">Katso lisää</button>
+          </div>
+        </div>
       </div>
     </div>
   </section>
@@ -75,28 +75,39 @@
     <h2>Labin välineistöä</h2>
     <div class="row middle-md center-xs">
       <div class="col-md-6 col-lg-3">
-        <article>
-          <h3>Tekniset työt</h3>
-          <p>Kattava valikoima puu-, metalli- ja elektroniikka­työkaluja, CNC-jyrsin, laserleikkuri, 3D-tulostin Prusa i3 MK3S, sekä ompelukone ja saumuri.</p>
-        </article>
+        <div class="card">
+          <div class="card-body">
+            <div class=""></div>
+            <h5 class="card-title">Tekniset työt</h5>
+            <p class="card-text">Kattava valikoima puu-, metalli- ja elektroniikka­työkaluja, CNC-jyrsin, laserleikkuri, 3D-tulostin Prusa i3 MK3S, sekä ompelukone ja saumuri.</p>
+          </div>
+        </div>
       </div>
       <div class="col-md-6 col-lg">
-        <article>
-          <h3>Puitteet rentoon ajanviettoon</h3>
-          <p>Keittiö, sauna, videotykki, sohvanurkkaus, kokoelma pelikonsoleita ja pelejä.</p>
-        </article>
+        <div class="card">
+          <div class="card-body">
+            <div class=""></div>
+            <h5 class="card-title">Puitteet rentoon ajanviettoon</h5>
+            <p class="card-text">Keittiö, sauna, videotykki, sohvanurkkaus, kokoelma pelikonsoleita ja pelejä.</p>
+          </div>
+        </div>
       </div>
       <div class="col-md-6 col-lg">
-        <article>
-          <h3>Virtuaalitodellisuus</h3>
-          <p>Tutustu virtuaalitodellisuuden immersiiviseen maailmaan HTC Vivellä ja kattavalla pelivalikoimalla hiljattain valmistuneessa VR-huoneessa.</p>
-        </article>
+        <div class="card">
+          <div class="card-body">
+            <div class=""></div>
+            <h5 class="card-title">Virtuaalitodellisuus</h5>
+            <p class="card-text">Tutustu virtuaalitodellisuuden immersiiviseen maailmaan HTC Vivellä ja kattavalla pelivalikoimalla hiljattain valmistuneessa VR-huoneessa.</p>
+          </div>
+        </div>
       </div>
       <div class="col-md-6 col-lg">
-        <article>
-          <h3>Radioamatööritoiminta</h3>
-          <p>T2FD-antenni ja radioasema radioamatööritoimintaan HF-taajuuksilla. Lisäksi antennit 2m ja 70cm taajuuksille. Radio­asema­tunnus OH6DDR.</p>
-        </article>
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Radioamatööritoiminta</h5>
+            <p class="card-text">T2FD-antenni ja radioasema radioamatööritoimintaan HF-taajuuksilla. Lisäksi antennit 2m ja 70cm taajuuksille. Radio­asema­tunnus OH6DDR.</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
