--- a/views/footer.twig
+++ b/views/footer.twig
@@ -2,10 +2,10 @@
 
   <div class="row middle-md around-md center-xs" style="padding-top: 6em; color: white;">
     <div class="col-md-6">
-      <h3>Tule tutustumaan toimintaamme kerhoilloissa tiistaisin ja lauantaisin ja liity <a href="/kerhotila/ryhmakeskustelu/">Telegram/Matrix kanavallemme</a>.</h3>
+      <h3 translation="Visit on club days on tuesdays and saturdays and join ">Tule tutustumaan toimintaamme kerhoilloissa tiistaisin ja lauantaisin ja liity <a href="/kerhotila/ryhmakeskustelu/" translation="our Telegram/Matrix channel.">Telegram/Matrix kanavallemme</a>.</h3>
     </div>
     <div class="col-md-4">
-      <button>Tutustu toimintaan</button>
+      <button translation="Visit Hacklab">Tutustu toimintaan</button>
     </div>
   </div>
 
@@ -22,7 +22,7 @@
       <p><a href="/kerhotila/">Avaa saapumisohje</a></p>
     </div>
     <div class="col-lg-3 col-xs-6">
-      <h4>Sponsorit</h4>
+      <h4 translation="Sponsors">Sponsorit</h4>
       <a href="https://jyy.fi/" target="_blank">
         <img src="/wp-content/uploads/2017/09/jyylogo-w-150x150.png" alt="Jyväskylän yliopiston ylioppilaskunnan logo"></a>
     </div>
