--- a/views/index.twig
+++ b/views/index.twig
@@ -21,7 +21,7 @@
         <h1 style="padding-top: 0.5em; color: white;" class="hdr-logo" role="banner">
 		      {{site.name}}
 	      </h1>
-        <h2 style="color: white;" translation="Makers living room">Tekevän ihmisen olohuone</h2>
+        <h2 style="color: white; margin-right:0.5em;" translation="Makers living room">Tekevän ihmisen olohuone</h2>
         <button class="contrast">VR Tour</button>
         <button translation="Visitor info">Vierailijan info</button>
       </div>
