Remove translation element attributes, using vanilla translation WIP
Bad idea

--- a/views/index.twig
+++ b/views/index.twig
@@ -8,7 +8,7 @@
     </div>
     <div class="col-xs-12 col-md-6 col-lg-4">
       <a href="https://zouppen.iki.fi/visitorwidget/"
-        style="color: lightgray" target="_blank" translation="">Kävijäseuranta</a>: TODO add status here
+        style="color: lightgray" target="_blank">Kävijäseuranta</a>: TODO add status here
     </div>
   </div>
 {% endblock %}
@@ -21,9 +21,9 @@
         <h1 style="padding-top: 0.5em; color: white;" class="hdr-logo" role="banner">
 		      {{site.name}}
 	      </h1>
-        <h2 style="color: white; margin-right:0.5em;" translation="Makers living room">Tekevän ihmisen olohuone</h2>
+        <h2 style="color: white; margin-right:0.5em;">Tekevän ihmisen olohuone</h2>
         <button class="contrast">VR Tour</button>
-        <button translation="Visitor info">Vierailijan info</button>
+        <button>Vierailijan info</button>
       </div>
     </div>
 
@@ -35,15 +35,15 @@
 
   <section>
     <div class="row">
-      <h2 translation="What is hacklab">Mikä Hacklab?</h2>
-      <p translation="Hacklab Jyväskylä is a well equipped and active hackerspace in Kortepohja district, bottom floor of the DDR-building welcoming hobbyist makers of all kinds.">Hacklab Jyväskylä ry on yhdistys, jota kuvaillaan kansainvälisesti nimellä makerspace tai hackerspace. Tällaisten yhdistysten aatteisiin kuuluu tieto- ja kädentaitojen avoin jakaminen ja niiden mahdollistaminen kaikille kiinnostuneille. Yhdistys on esimerkiksi yhdessä Linkki Jyväskylä ry kanssa järjestänyt digitaalisen tekemisen Instanssi -festivaalia, kehittänyt ja käyttänyt runsaasti avoimen lähdekoodin ohjelmistoja, tarjonnut käyttökoulutusta ja apua kaikenlaiseen askarteluun sekä puutöihin ja järjestänyt pieniä seminaareja ohjelmistokehityksen teoreettisista puolista.</p>
+      <h2>Mikä Hacklab?</h2>
+      <p>Hacklab Jyväskylä ry on yhdistys, jota kuvaillaan kansainvälisesti nimellä makerspace tai hackerspace. Tällaisten yhdistysten aatteisiin kuuluu tieto- ja kädentaitojen avoin jakaminen ja niiden mahdollistaminen kaikille kiinnostuneille. Yhdistys on esimerkiksi yhdessä Linkki Jyväskylä ry kanssa järjestänyt digitaalisen tekemisen Instanssi -festivaalia, kehittänyt ja käyttänyt runsaasti avoimen lähdekoodin ohjelmistoja, tarjonnut käyttökoulutusta ja apua kaikenlaiseen askarteluun sekä puutöihin ja järjestänyt pieniä seminaareja ohjelmistokehityksen teoreettisista puolista.</p>
     </div>
 
     <div class="row middle-md center-xs">
       <div class="col-md">
         <article>
-          <h3 translation="Communal work space">Yhteisölliset työtilat</h3>
-          <p translation="Large collection of tools with an affordable member’s fee (with student discounts).">Monipuolinen työtila ja välineet edulliseen jäsenhintaan opiskelija-alennuksin.</p>
+          <h3>Yhteisölliset työtilat</h3>
+          <p>Monipuolinen työtila ja välineet edulliseen jäsenhintaan opiskelija-alennuksin.</p>
           <footer>
             <div role="group"><button href="Apply for membership">Hae jäseneksi</button></div>
           </footer>
@@ -51,18 +51,18 @@
       </div>
       <div class="col-md">
         <article>
-          <h3 translation="Connecting makers locally and online">Harrasteseuraa paikallisesti ja verkossa</h3>
-          <p translation="Active and friendly Telegram chat group with people from various fields.">Aktiivinen ja avulias chat ryhmä jossa osaajia erilaisilta teknisiltä ja taiteellisilta aloilta.</p>
+          <h3>Harrasteseuraa paikallisesti ja verkossa</h3>
+          <p>Aktiivinen ja avulias chat ryhmä jossa osaajia erilaisilta teknisiltä ja taiteellisilta aloilta.</p>
           <footer><div role="group"><button href="">Liity chat-kanavalle</button></div></footer>
         </article>
       </div>
       <div class="col-md">
         <article>
-          <h3 translation="Part of Finnish Hacklab network">Osa Suomen Hacklabien verkostoa</h3>
-          <p translation="There are Hacklabs in 15 cities in Finland">Suomessa on Hacklabeja jo 15 kaupungissa.</p>
+          <h3>Osa Suomen Hacklabien verkostoa</h3>
+          <p>Suomessa on Hacklabeja jo 15 kaupungissa.</p>
           <footer>
             <div role="group">
-              <button href="hacklab.fi" translation="See more">Katso lisää</button>
+              <button href="hacklab.fi">Katso lisää</button>
             </div>
           </footer>
         </article>
@@ -71,37 +71,37 @@
   </section>
 
   <section>
-    <h2 translation="Tools and resources">Labin välineistöä</h2>
+    <h2>Labin välineistöä</h2>
     <div class="row middle-md center-xs">
       <div class="col-md-6 col-lg-3">
         <article>
-          <h3 translation="Workshop">Tekniset työt</h3>
-          <p translation="An inclusive collection of tools for working with wood, metal and electronic devices can be found at the lab. Also 3D printers, laser cutter and a CNC mill.">Kattava valikoima puu-, metalli- ja elektroniikka­työkaluja, CNC-jyrsin, laserleikkuri, 3D-tulostin Prusa i3 MK3S, sekä ompelukone ja saumuri.</p>
+          <h3>Tekniset työt</h3>
+          <p>Kattava valikoima puu-, metalli- ja elektroniikka­työkaluja, CNC-jyrsin, laserleikkuri, 3D-tulostin Prusa i3 MK3S, sekä ompelukone ja saumuri.</p>
         </article>
       </div>
       <div class="col-md-6 col-lg">
         <article>
-          <h3 translation="Leisure time">Puitteet rentoon ajanviettoon</h3>
-          <p translation="Fully equipped kitchen, sauna, collection of game consoles and games.">Keittiö, sauna, videotykki, sohvanurkkaus, kokoelma pelikonsoleita ja pelejä.</p>
+          <h3>Puitteet rentoon ajanviettoon</h3>
+          <p>Keittiö, sauna, videotykki, sohvanurkkaus, kokoelma pelikonsoleita ja pelejä.</p>
         </article>
       </div>
       <div class="col-md-6 col-lg">
         <article>
-          <h3 translation="Virtual Reality">Virtuaalitodellisuus</h3>
-          <p translation="Enjoy HTC Vive in the new VR room with a large collection of games.">Tutustu virtuaalitodellisuuden immersiiviseen maailmaan HTC Vivellä ja kattavalla pelivalikoimalla hiljattain valmistuneessa VR-huoneessa.</p>
+          <h3>Virtuaalitodellisuus</h3>
+          <p>Tutustu virtuaalitodellisuuden immersiiviseen maailmaan HTC Vivellä ja kattavalla pelivalikoimalla hiljattain valmistuneessa VR-huoneessa.</p>
         </article>
       </div>
       <div class="col-md-6 col-lg">
         <article>
-          <h3 translation="Amateur radio station">Radioamatööritoiminta</h3>
-          <p translation="Hacklab has a T2FD-antenna and station for radio amateur purposes. Station identifier OH6DDR.">T2FD-antenni ja radioasema radioamatööritoimintaan HF-taajuuksilla. Lisäksi antennit 2m ja 70cm taajuuksille. Radio­asema­tunnus OH6DDR.</p>
+          <h3>Radioamatööritoiminta</h3>
+          <p>T2FD-antenni ja radioasema radioamatööritoimintaan HF-taajuuksilla. Lisäksi antennit 2m ja 70cm taajuuksille. Radio­asema­tunnus OH6DDR.</p>
         </article>
       </div>
     </div>
   </section>
 
   <section>
-    <h2 translation="Latest in blog">Viimeisimmät artikkelit blogissa</h2>
+    <h2>Viimeisimmät artikkelit blogissa</h2>
       <article>
     <div class="row">
 	    {% for post in posts %}
@@ -116,14 +116,14 @@
     </div class="row">
     <div class="row center-xs">
       <div class="col-xs-6">
-        <button href="/blogi" style="margin-top:1em;" translation="Browse more">Selaa lisää</button>
+        <button href="/blogi" style="margin-top:1em;">Selaa lisää</button>
       </div>
     </div>
       </article>
   </section>
 
   <section>
-    <h2 translation="News">Tiedotteet</h2>
+    <h2>Tiedotteet</h2>
     <div class="row">
       <div class="col-lg">
         <ul>
