Improve link contrast.

--- a/static/pico.lime.css
+++ b/static/pico.lime.css
@@ -234,7 +234,7 @@ details summary[role=button]:not(.outline)::after {
   --pico-text-selection-color: #daebcf; /* rgba(119, 156, 0, 0.25); */
   --pico-muted-color: #646b79;
   --pico-muted-border-color: #e7eaf0;
-  --pico-primary: #1f3014; /* #577400; */
+  --pico-primary: #1f3014; /* TODO get shade between dim and primary color? */ /* #577400; */
   --pico-primary-background: #91c270; /* #a5d601; */
   --pico-primary-border: var(--pico-primary-background);
   --pico-primary-underline: #daebcf; /* rgba(87, 116, 0, 0.5); */
@@ -354,11 +354,11 @@ details summary[role=button]:not(.outline)::after {
     --pico-text-selection-color: #1f3014; /* rgba(130, 171, 0, 0.1875); */
     --pico-muted-color: #7b8495;
     --pico-muted-border-color: #202632;
-    --pico-primary: #daebcf; /* #82ab00; */
+    --pico-primary: #91c270; /* var(--pico-h3-color); */ /* #82ab00; */
     --pico-primary-background: #91c270; /* #a5d601; */
     --pico-primary-border: var(--pico-primary-background);
     --pico-primary-underline: #91c270; /* rgba(130, 171, 0, 0.5); */
-    --pico-primary-hover: #91c270; /* #99c801; */
+    --pico-primary-hover: #daebcf; /* #99c801; */
     --pico-primary-hover-background: #daebcf; /* #b2e51a; */
     --pico-primary-hover-border: var(--pico-primary-hover-background);
     --pico-primary-hover-underline: var(--pico-primary-hover);
