--- a/views/page-blogi.twig
+++ b/views/page-blogi.twig
@@ -7,14 +7,7 @@
     <h1>Blogi WIP wip</h1>
     <div class="row">
 	    {% for post in posts %}
-        <div class="col-md-3 col-xs-6">
-		      <h2 class="h2"><a href="{{post.link}}">{{ post.title }}</a></h2>
-	        <!-- <p>{{ post.excerpt({ words:20, read_more: "Read more..." }) }}</p> -->
-	        {% if post.thumbnail.src %}
-		        <img src="{{ post.thumbnail.src | letterbox(300, 300) }}" />
-	        {% endif %}
-          <!-- <p>{{ post.excerpt({ words:20, read_more: "Read more..." }) }}</p> -->
-        </div>
+        {% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
 	    {% endfor %}
     </div class="row">
     TODO pagination not working
