--- a/views/index.twig
+++ b/views/index.twig
@@ -104,12 +104,8 @@
       <article>
     <div class="row">
 	    {% for post in posts %}
-        <div class="col-md-3 col-xs-6">
-		      <h4 style="min-height: 3.5em;"><a href="{{post.link}}">{{ post.title }}</a></h4>
-	        {% if post.thumbnail.src %}
-		        <a href="{{post.link}}"><img src="{{ post.thumbnail.src('large') }}" style="width:300px; height:200px; object-fit:cover;" /></a>
-	        {% endif %}
-          <p style="margin-bottom:1em;"><strong>{{ post.date }}</strong> {{ post.author }}</p>
+        <div class="col-md-6">
+          {% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
         </div>
 	    {% endfor %}
     </div class="row">
