--- a/views/tease-post.twig
+++ b/views/tease-post.twig
@@ -6,20 +6,21 @@
   <div class="row">
 
     <div class="col-xs">
-      <p>{{ post.excerpt({ words:20, read_more: "Lue lisää..." }) }}</p>
+      <p>{{ post.excerpt({ words:17, read_more: "Lue lisää..." }) }}</p>
       <p style="margin-bottom:0"><strong>{{ post.date }}</strong> {{ post.author }}
 
         <!-- TODO issue with archive pages -->
         {#% for term in post.terms({ taxonomy: 'category' }) %#}
         <!-- <a href="{{ term.link }}">{{ term.title }}</a> -->
         {#% endfor %#}
-
       </p>
 
     </div>
 	  {% if post.thumbnail.src %}
 	    <div class="col-xs-4">
-		    <img src="{{ post.thumbnail.src('medium') }}" style="width:200px; height: 150px; object-fit: cover;" />
+        <a href="{{ post.link }}">
+		      <img src="{{ post.thumbnail.src('medium') }}" style="width:200px; height: 150px; object-fit: cover;" />
+        </a>
       </div>
 	  {% endif %}
 
