--- a/views/index.twig
+++ b/views/index.twig
@@ -111,7 +111,7 @@
     </div class="row">
     <div class="row center-xs">
       <div class="col-xs-6">
-        <button href="/blogi" style="margin-top:1em;">Selaa lisää</button>
+        <button href="/blogi" style="margin-top:1em; margin-bottom:1em;">Selaa lisää</button>
       </div>
     </div>
       </article>
