--- a/views/page-blogi.twig
+++ b/views/page-blogi.twig
@@ -5,11 +5,8 @@
 
   <section>
     <h1>Blogi</h1>
-    <div class="row">
-	    {% for post in posts %}
-        {% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
-	    {% endfor %}
-    </div class="row">
+    {{ include('partial/postlist-2col.twig') }}
+
     TODO pagination not working
 	  {% include 'partial/pagination.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
   </section>
