--- a/views/single.twig
+++ b/views/single.twig
@@ -9,7 +9,12 @@
 				<h1 class="article-h1">{{ post.title }}</h1>
 				<a href="{{ post.link }}">{{ _e('edit') }}</a>
 				<p class="blog-author">
-					<span>By</span><a href="{{post.author.path}}"> {{ post.author.name }} </a><span>&bull;</span> <time datetime="{{ post.date|date('Y-m-d H:i:s') }}">{{ post.date }}</time>
+					<span>By</span><a href="{{post.author.path}}"> {{ post.author.name }} </a><span>&bull;</span> <time datetime="{{ post.date|date('Y-m-d H:i:s') }}">{{ post.date }}</time><span> &bull;</span>
+
+          {% for term in post.terms({ taxonomy: 'category' }) %}
+            <a href="{{ term.link }}">{{ term.title }}</a>
+          {% endfor %}
+
 				</p>
 				<div class="article-body">
 					{{post.content}}
