--- a/views/footer.twig
+++ b/views/footer.twig
@@ -1,6 +1,6 @@
 <div class="container" style="background-color: rgba(0, 0, 0, 0.5); padding: 2em;">
 
-  <div class="row middle-md around-md center-xs" style="padding-top: 6em; color: white;">
+  <div class="row middle-md around-md center-xs" style="padding-top: 6em;">
     <div class="col-md-6">
       <h3>Tule tutustumaan toimintaamme kerhoilloissa tiistaisin ja lauantaisin ja liity <a href="/kerhotila/ryhmakeskustelu/">Telegram/Matrix kanavallemme</a>.</h3>
     </div>
