Fix links in index

--- a/views/index.twig
+++ b/views/index.twig
@@ -21,8 +21,9 @@
 		      {{site.name}}
 	      </h1>
         <h2 style="color: white; margin-right:0.5em;">Tekevän ihmisen olohuone</h2>
-        <button class="contrast">VR Tour</button>
-        <button>Vierailijan info</button>
+        <a href="https://kuula.co/post/5cXXy/collection/7XF4k" target="_blank"><button class="outline contrast">VR Tour</button></a>
+        <a href="/kerhotila/"><button>Tule tutustumaan</button></a>
+        <a href="/the-space/"><button>Visitor info</button></a>
       </div>
     </div>
 
@@ -44,7 +45,9 @@
           <h3>Yhteisölliset työtilat</h3>
           <p>Monipuolinen työtila ja välineet edulliseen jäsenhintaan opiskelija-alennuksin.</p>
           <footer>
-            <div role="group"><button href="Apply for membership">Hae jäseneksi</button></div>
+            <div role="group">
+              <a href="/yhdistys/jasenyys/"><button>Hae jäseneksi</button></a>
+            </div>
           </footer>
         </article>
       </div>
@@ -52,7 +55,9 @@
         <article>
           <h3>Harrasteseuraa paikallisesti ja verkossa</h3>
           <p>Aktiivinen ja avulias chat ryhmä jossa osaajia erilaisilta teknisiltä ja taiteellisilta aloilta.</p>
-          <footer><div role="group"><button href="">Liity chat-kanavalle</button></div></footer>
+          <footer><div role="group">
+            <a href="/kerhotila/ryhmakeskustelu/"><button>Liity chat-kanavalle</button></a>
+          </div></footer>
         </article>
       </div>
       <div class="col-md">
@@ -61,7 +66,7 @@
           <p>Suomessa on Hacklabeja jo 15 kaupungissa.</p>
           <footer>
             <div role="group">
-              <button href="hacklab.fi">Katso lisää</button>
+              <a href="https://hacklab.fi/"><button>Katso lisää</button></a>
             </div>
           </footer>
         </article>
@@ -105,7 +110,7 @@
       {{ include('partial/postlist-2col.twig') }}
       <div class="row center-xs">
         <div class="col-xs-6">
-          <button href="/blogi" style="margin-top:1em; margin-bottom:1em;">Selaa lisää</button>
+          <a href="/blogi"><button style="margin-top:1em; margin-bottom:1em;">Selaa lisää</button></a>
         </div>
       </div>
     </article>
