--- a/views/index.twig
+++ b/views/index.twig
@@ -117,16 +117,22 @@
   </section>
 
   <section>
-    <h2>Tiedotteet</h2>
+
     <div class="row">
-      <div class="col-lg">
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8">
+        <h2>Tiedotteet</h2>
         <ul>
           {% for post in news %}
             <li>{{post.date}} <a href="{{post.link}}">{{post.title}}</a></li>
 	        {% endfor %}
         </ul>
       </div>
-      <div class="col-lg">
+    </div>
+    <div class="row">
+      <div class="col-lg-2"></div>
+      <div class="col-lg-8">
+        <h2>Tapahtumakalenteri</h2>
         <article>
           {% apply shortcodes %} [calendar id="283"] {% endapply %}
         </article>
