--- a/views/index.twig
+++ b/views/index.twig
@@ -21,9 +21,8 @@
 		      {{site.name}}
 	      </h1>
         <h2 style="color: white; margin-right:0.5em;">Tekevän ihmisen olohuone</h2>
-        <a href="https://kuula.co/post/5cXXy/collection/7XF4k" target="_blank"><button class="outline contrast">VR Tour</button></a>
-        <a href="/kerhotila/"><button>Tule tutustumaan</button></a>
-        <a href="/the-space/"><button>Visitor info</button></a>
+        <a href="/kerhotila/"><button class="">Tule tutustumaan</button></a>
+        <a href="https://kuula.co/post/5cXXy/collection/7XF4k" target="_blank"><button class="secondary">VR Tour</button></a>
       </div>
     </div>
 
