--- a/views/visitors.twig
+++ b/views/visitors.twig
@@ -5,7 +5,7 @@
       <path d="M10.828.122A.5.5 0 0 1 11 .5V1h.5A1.5 1.5 0 0 1 13 2.5V15h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V1.5a.5.5 0 0 1 .43-.495l7-1a.5.5 0 0 1 .398.117zM11.5 2H11v13h1V2.5a.5.5 0 0 0-.5-.5zM4 1.934V15h6V1.077l-6 .857z"></path>
     </svg>
   </span>
-  <a href="https://zouppen.iki.fi/visitorwidget/">Kävijäseuranta:</a>
+  <a href="https://zouppen.iki.fi/visitorwidget/" style="color:rgb(145, 194, 112)">Kävijäseuranta:</a>
   <span id="kavseuranta-status">Ladataan...</span>
 </div>
 <script>
@@ -18,7 +18,7 @@
       if (data.open){
         console.log("Ovet ovat avoinna, tervetuloa");
         jQuery('#kavseuranta-status').text("Ovet ovat avoinna, tervetuloa!");
-        jQuery('#kavseuranta-icon').css("color", "var(--accent)");
+        jQuery('#kavseuranta-icon').css("color", "rgb(145, 194, 112)");
       } else if (data.empty){
         console.log("Hacklab on nyt tyhjä");
         jQuery('#kavseuranta-status').text("Hacklab on nyt tyhjä.");
@@ -27,7 +27,7 @@
       } else {
         console.log("Hacklabilla ollaan paikalla");
         jQuery('#kavseuranta-status').text("Hacklabilla ollaan paikalla.");
-        jQuery('#kavseuranta-icon').css("color", "var(--accent)");
+        jQuery('#kavseuranta-icon').css("color", "rgb(145, 194, 112)");
       }
 
       var visitors = "";
