--- a/static/pico.lime.css
+++ b/static/pico.lime.css
@@ -221,28 +221,24 @@ details summary[role=button]:not(.outline)::after {
 }
 
 /**
- * Color schemes
- * HacklabJKL logo colours from https://github.com/HacklabJKL/logo/
- * - Primary #91c270
- * - Light #daebcf
- * - Dim #1f3014
+ * Color schemes, using jkl-brand-color variables from style.css
  */
 [data-theme=light],
 :root:not([data-theme=dark]) {
   --pico-background-color: #fff;
   --pico-color: #373c44;
-  --pico-text-selection-color: #daebcf; /* rgba(119, 156, 0, 0.25); */
+  --pico-text-selection-color: var(--jkl-brand-color-light); /* rgba(119, 156, 0, 0.25); */
   --pico-muted-color: #646b79;
   --pico-muted-border-color: #e7eaf0;
-  --pico-primary: #1f3014; /* TODO get shade between dim and primary color? */ /* #577400; */
-  --pico-primary-background: #91c270; /* #a5d601; */
+  --pico-primary: var(--jkl-brand-color-dark); /* TODO get shade between dim and primary color? */ /* #577400; */
+  --pico-primary-background: var(--jkl-brand-color-primary); /* #a5d601; */
   --pico-primary-border: var(--pico-primary-background);
-  --pico-primary-underline: #daebcf; /* rgba(87, 116, 0, 0.5); */
-  --pico-primary-hover: #91c270; /* #435a00; */
-  --pico-primary-hover-background: #daebcf; /* #99c801; */
+  --pico-primary-underline: var(--jkl-brand-color-light); /* rgba(87, 116, 0, 0.5); */
+  --pico-primary-hover: var(--jkl-brand-color-primary); /* #435a00; */
+  --pico-primary-hover-background: var(--jkl-brand-color-light); /* #99c801; */
   --pico-primary-hover-border: var(--pico-primary-hover-background);
   --pico-primary-hover-underline: var(--pico-primary-hover);
-  --pico-primary-focus: #daebcf; /* rgba(119, 156, 0, 0.5); */
+  --pico-primary-focus: var(--jkl-brand-color-light); /* rgba(119, 156, 0, 0.5); */
   --pico-primary-inverse: #000;
   --pico-secondary: #5d6b89;
   --pico-secondary-background: #525f7a;
@@ -351,18 +347,18 @@ details summary[role=button]:not(.outline)::after {
   :root:not([data-theme]) {
     --pico-background-color: #13171f;
     --pico-color: #c2c7d0;
-    --pico-text-selection-color: #1f3014; /* rgba(130, 171, 0, 0.1875); */
+    --pico-text-selection-color: var(--jkl-brand-color-dark); /* rgba(130, 171, 0, 0.1875); */
     --pico-muted-color: #7b8495;
     --pico-muted-border-color: #202632;
-    --pico-primary: #91c270; /* var(--pico-h3-color); */ /* #82ab00; */
-    --pico-primary-background: #91c270; /* #a5d601; */
+    --pico-primary: var(--jkl-brand-color-primary); /* var(--pico-h3-color); */ /* #82ab00; */
+    --pico-primary-background: var(--jkl-brand-color-primary); /* #a5d601; */
     --pico-primary-border: var(--pico-primary-background);
-    --pico-primary-underline: #91c270; /* rgba(130, 171, 0, 0.5); */
-    --pico-primary-hover: #daebcf; /* #99c801; */
-    --pico-primary-hover-background: #daebcf; /* #b2e51a; */
+    --pico-primary-underline: var(--jkl-brand-color-primary); /* rgba(130, 171, 0, 0.5); */
+    --pico-primary-hover: var(--jkl-brand-color-light); /* #99c801; */
+    --pico-primary-hover-background: var(--jkl-brand-color-light); /* #b2e51a; */
     --pico-primary-hover-border: var(--pico-primary-hover-background);
     --pico-primary-hover-underline: var(--pico-primary-hover);
-    --pico-primary-focus: #91c270; /* rgba(130, 171, 0, 0.375); */
+    --pico-primary-focus: var(--jkl-brand-color-primary); /* rgba(130, 171, 0, 0.375); */
     --pico-primary-inverse: #000;
     --pico-secondary: #969eaf;
     --pico-secondary-background: #525f7a;
