--- a/style.css
+++ b/style.css
@@ -6,7 +6,19 @@
 
 
 /*
- * Navigation menu tweaks
+ * Brand colors from Hacklab Jyväskylä logo https://github.com/HacklabJKL/logo/
+ * Used by pico.lime.css and elsewhere to define CSS theme colors
+ */
+:root {
+  --jkl-brand-color-primary: #91c270;
+  --jkl-brand-color-light: #daebcf;
+  --jkl-brand-color-dark: #1f3014;
+  /* TODO add one shade between primary and dark */
+}
+
+
+/*
+ * Navigation menu tweaks, mostly hacky workarounds to pico.css defaults
  */
 
 /* Separate desktop and mobile menu */
@@ -32,21 +44,31 @@ a.mobile-menulink {
 
 
 /*
+ * Footer
+ */
+
+/* TODO fix footer with light theme */
+
+/* footer h3 { */
+/*   color: rgb(145, 194, 112); */
+/* } */
+
+
+/*
  * Style compatibility hacks for plugins etc
  */
 
-
 /* Index page calendar plugin compatibility */
 .simcal-tooltip-content > p {
-  color: #1f3014;
+  color: var(--jkl-brand-color-dark);
   font-size: 1.4em;
 }
 .simcal-tooltip-content > p > a {
-  color: rgb(55, 60, 68);
+  color: var(--jkl-brand-color-dark);
   font-size: 1em;
 }
 .simcal-event-description > p {
-  color: rgb(55, 60, 68);
+  color: var(--jkl-brand-color-dark);
 }
 
 
