Link 404 page to search and Github issue tracker

--- a/views/404.twig
+++ b/views/404.twig
@@ -1,5 +1,7 @@
 {% extends "base.twig" %}
 
 {% block content %}
-	Sorry, we couldn't find what you're looking for.
+	<p>Sorry, we couldn't find what you're looking for (error 404).</p>
+  <p>Maybe you could try <a href="/?s=">the search</a> instead.</p>
+  <p>If you think this is a bug, please see known issues <a target="_blank" href="https://github.com/HacklabJKL/hacklabjkl-timber/issues">at Github</a> and raise new one if it is not yet listed or notify staff.</p>
 {% endblock %}
