--- a/views/footer.twig
+++ b/views/footer.twig
@@ -5,7 +5,7 @@
       <h3>Tule tutustumaan toimintaamme kerhoilloissa tiistaisin ja lauantaisin ja liity <a href="/kerhotila/ryhmakeskustelu/">Telegram/Matrix kanavallemme</a>.</h3>
     </div>
     <div class="col-md-4">
-      <button>Tutustu toimintaan</button>
+      <a href="https://jkl.hacklab.test/kerhotila/"><button>Tutustu toimintaan</button></a>
     </div>
   </div>
 
