--- a/views/index.twig
+++ b/views/index.twig
@@ -13,10 +13,10 @@
 {% endblock %}
 
 {% block nav_after %} <!-- Index page hero content -->
-  <div class="row" style="min-height: 50em; padding-top:33em;">
+  <div class="row bottom-xs" style="min-height: 80vh; max-height:90vh;">
 
     <div class="col-md-6">
-      <div id="index-hero-controls" style="background: rgba(0, 0, 0, 0.2); padding: 0 0 1em 1em;">
+      <div id="index-hero-controls" style="background: rgba(0, 0, 0, 0.2); padding: 0 0 1em 1em; margin-bottom: 1em;">
         <h1 style="padding-top: 0.5em; color: white;" class="hdr-logo" role="banner">
 		      {{site.name}}
 	      </h1>
